// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-arc-servers - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure Arc-enabled servers router. WHEN: Arc Server, Arc-enabled server, Connected Machine agent, azcmagent, hybrid server, on-prem server, onboard to Arc, project a server into Azure, connect machine to Azure, install Connected Machine agent, generate onboarding script, at-scale onboarding, Group Policy onboarding, Configuration Manager onboarding, Ansible onboarding, Service Principal for Arc, Arc Private Link Scope, Arc Gateway, proxy for Arc, agent connectivity, agent status, Connected / Disconnected / Expired / Error, agent upgrade, automatic upgrade, manual upgrade, Extended Security Updates (ESU) for Arc, Hotpatch on Arc, Pay-as-you-go Windows Server, Software Assurance benefits, Microsoft.HybridCompute, hybridcompute/machines. PREFER OVER azure-compute when the user is talking about non-Azure (on-prem, other-cloud, edge) servers being projected into Azure - not about creating an Azure VM.",
  "extractedKeywords": [
    "about",
    "agent",
    "ansible",
    "arc",
    "arc-enabled",
    "assurance",
    "at-scale",
    "automatic",
    "azcmagent",
    "azure",
    "azure-compute",
    "being",
    "benefits",
    "cli",
    "configuration",
    "connect",
    "connected",
    "connectivity",
    "creating",
    "deploy",
    "disconnected",
    "edge",
    "error",
    "expired",
    "extended",
    "gateway",
    "generate",
    "group",
    "hotpatch",
    "hybrid",
    "hybridcompute",
    "install",
    "into",
    "link",
    "machine",
    "machines",
    "manager",
    "manual",
    "mcp",
    "microsoft",
    "monitor",
    "non-azure",
    "on-prem",
    "onboard",
    "onboarding",
    "other-cloud",
    "over",
    "pay-as-you-go",
    "policy",
    "prefer",
    "principal",
    "private",
    "project",
    "projected",
    "proxy",
    "router",
    "scope",
    "script",
    "security",
    "server",
    "servers",
    "service",
    "software",
    "status",
    "talking",
    "updates",
    "upgrade",
    "user",
    "when",
    "windows",
  ],
  "name": "azure-arc-servers",
}
`;

exports[`azure-arc-servers - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "about",
  "agent",
  "ansible",
  "arc",
  "arc-enabled",
  "assurance",
  "at-scale",
  "automatic",
  "azcmagent",
  "azure",
  "azure-compute",
  "being",
  "benefits",
  "cli",
  "configuration",
  "connect",
  "connected",
  "connectivity",
  "creating",
  "deploy",
  "disconnected",
  "edge",
  "error",
  "expired",
  "extended",
  "gateway",
  "generate",
  "group",
  "hotpatch",
  "hybrid",
  "hybridcompute",
  "install",
  "into",
  "link",
  "machine",
  "machines",
  "manager",
  "manual",
  "mcp",
  "microsoft",
  "monitor",
  "non-azure",
  "on-prem",
  "onboard",
  "onboarding",
  "other-cloud",
  "over",
  "pay-as-you-go",
  "policy",
  "prefer",
  "principal",
  "private",
  "project",
  "projected",
  "proxy",
  "router",
  "scope",
  "script",
  "security",
  "server",
  "servers",
  "service",
  "software",
  "status",
  "talking",
  "updates",
  "upgrade",
  "user",
  "when",
  "windows",
]
`;
